[KARAF-6326] Fix instances with JDK 11